<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/judul_form"
            android:id="@+id/judul"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/label_namaKontak"
                android:labelFor="@id/nama_txt" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:hint="@string/placeholder_namaKontak"
                android:id="@+id/nama_txt"
                tools:ignore="TextFields" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/label_nomorPonsel"
                android:labelFor="@id/phone_number_txt" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginBottom="10dp"
                android:text=""
                android:hint="@string/placeholder_nomorPonsel"
                android:inputType="number"
                android:maxLength="11"
                android:id="@+id/phone_number_txt"
                tools:ignore="TextFields" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="20"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/label_tanggal"
                    android:labelFor="@id/phone_number_txt" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text=""
                    android:textColor="@color/black"
                    android:id="@+id/date_txt"
                    android:enabled="false"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/choose_date_button"
                    android:text="Tanggal"
                    android:onClick="setInputTanggal"
                    />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_button"
            android:layout_marginBottom="24dp"
            android:text="@string/label_tombolSubmit"
            android:onClick="setInputTanggal"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/judul_list"
            android:id="@+id/judul_list"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/list"
            android:id="@+id/list_kontak_txt"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>




</LinearLayout>